--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "stats-webpack-plugin": "0.6.1",
     "style-loader": "0.19.0",
     "typescript": "2.5.3",
+    "url-loader": "^0.6.2",
     "webpack": "3.7.1",
     "webpack-dev-server": "2.9.1",
     "webpack-hot-middleware": "2.19.1"
