--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "concurrently": "3.4.0",
     "express": "4.15.2",
     "extract-text-webpack-plugin": "2.1.0",
+    "font-awesome": "^4.7.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-redux": "5.0.6",
