--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "babel-runtime": "6.26.0",
     "chai": "3.5.0",
     "chalk": "2.1.0",
+    "copy-webpack-plugin": "4.0.1",
     "cross-env": "5.0.5",
     "css-loader": "0.28.7",
     "eslint": "4.8.0",
